[gd_scene load_steps=4 format=3 uid="uid://cbsal0wiyon0b"]

[ext_resource type="Script" path="res://characters/fish/fish.gd" id="1_kwj5d"]
[ext_resource type="Texture2D" uid="uid://b8ydw56fw8nu4" path="res://assets/regfish_cutout.png" id="2_ton03"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6rmjw"]
radius = 61.0
height = 190.0

[node name="RegFish" type="Area2D"]
script = ExtResource("1_kwj5d")
value = 5.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_ton03")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_6rmjw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
