[gd_scene load_steps=5 format=3 uid="uid://d01bahdob30ln"]

[ext_resource type="Script" path="res://characters/fish/fish.gd" id="1_1aioc"]
[ext_resource type="Texture2D" uid="uid://07p4hdqlcu0q" path="res://assets/shark_cutout.png" id="1_wj2nx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6rmjw"]
radius = 180.0
height = 493.333

[sub_resource type="CircleShape2D" id="CircleShape2D_3r7vv"]
radius = 1000.09

[node name="shark" type="Sprite2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_wj2nx")
script = ExtResource("1_1aioc")
value = 500.0

[node name="fishBody" type="Area2D" parent="."]
scale = Vector2(0.15, 0.15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="fishBody"]
position = Vector2(-44.4444, -44.4444)
rotation = 1.5708
scale = Vector2(6.66667, 6.66667)
shape = SubResource("CapsuleShape2D_6rmjw")

[node name="detectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionRange"]
shape = SubResource("CircleShape2D_3r7vv")

[node name="DEBUG" type="Polygon2D" parent="detectionRange"]
color = Color(1, 1, 1, 0.372549)
polygon = PackedVector2Array(-6.66667, -1000, 513.333, -846.667, 866.667, -493.333, 1000, -6.66667, 886.667, 493.333, 533.333, 846.667, 0, 993.333, -506.667, 873.333, -866.667, 493.333, -1000, 6.66667, -840, -546.667, -466.667, -893.333)

[connection signal="body_entered" from="fishBody" to="." method="_on_fish_body_body_entered"]
[connection signal="body_entered" from="detectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="detectionRange" to="." method="_on_detection_range_body_exited"]
